[gd_scene load_steps=60 format=3 uid="uid://b73yb04wjxq8"]

[ext_resource type="Script" path="res://src/indoor_preparation/indoor_preparation.gd" id="2_0rynj"]
[ext_resource type="Theme" uid="uid://dk5iv042psfw" path="res://assets/themes/Default.tres" id="2_bky62"]
[ext_resource type="PackedScene" uid="uid://h1fowbxngb70" path="res://src/audio_manager/AudioManager.tscn" id="3_3bed5"]
[ext_resource type="Script" path="res://src/indoor_preparation/screen.gd" id="3_culvi"]
[ext_resource type="PackedScene" uid="uid://7vx27hr83tx0" path="res://src/indoor_preparation/screen_displays/home_display.tscn" id="3_eot0a"]
[ext_resource type="Texture2D" uid="uid://ckpcsghku25rt" path="res://assets/art/indoor_real.jpg" id="4_2oynj"]
[ext_resource type="PackedScene" uid="uid://dw8jtxw6u5x40" path="res://src/indoor_preparation/screen_displays/browse_hires/browse_hires.tscn" id="4_note4"]
[ext_resource type="Theme" uid="uid://dmwrgmv8lathf" path="res://assets/themes/ScreenTheme.tres" id="4_u741y"]
[ext_resource type="PackedScene" uid="uid://cdb8nv77bouh1" path="res://src/indoor_preparation/screen_displays/hire_detail/hire_detail.tscn" id="5_lncqs"]
[ext_resource type="PackedScene" uid="uid://bvpdxuf4a56pf" path="res://src/indoor_preparation/screen_displays/crew_member_detail/crew_member_detail.tscn" id="6_4pq4g"]
[ext_resource type="PackedScene" uid="uid://dj3cohh45iw0d" path="res://src/indoor_preparation/crew_buttons/crew_button.tscn" id="8_40muy"]
[ext_resource type="Resource" uid="uid://cghmtnhtq1aeh" path="res://assets/data/characters/001_squirrel_char.tres" id="9_51070"]
[ext_resource type="PackedScene" uid="uid://cib1fq003l5jx" path="res://src/indoor_preparation/screen_displays/shared/screen_notification.tscn" id="9_b6hiw"]
[ext_resource type="Script" path="res://src/indoor_preparation/notification_dimmer.gd" id="9_d2y4p"]
[ext_resource type="Resource" uid="uid://duswkektwj6hb" path="res://assets/data/characters/002_frog_char.tres" id="10_lfrlp"]
[ext_resource type="Resource" uid="uid://b3l83j0ql7m0e" path="res://assets/data/characters/003_raccoon_char.tres" id="12_tfexc"]
[ext_resource type="Resource" uid="uid://bfkdaseurpvu6" path="res://assets/data/characters/004_bird_char.tres" id="13_1osln"]
[ext_resource type="Script" path="res://src/indoor_preparation/crew_buttons_parent.gd" id="13_2a042"]
[ext_resource type="Resource" uid="uid://dexsvne2ukrlr" path="res://assets/data/characters/005_ape_char.tres" id="14_kx6ve"]
[ext_resource type="Texture2D" uid="uid://cgopjb770sv4k" path="res://assets/art/crew_member_buttons/snake/Lounge-Scene_0010_Cobra.png" id="15_68lr5"]
[ext_resource type="Resource" uid="uid://bawjwhqx6mbin" path="res://assets/data/characters/006_mouse_char.tres" id="15_nfr47"]
[ext_resource type="BitMap" uid="uid://p0vuqhuolmtf" path="res://assets/art/crew_member_buttons/snake/Lounge-Scene_0010_Cobra.bmp" id="16_dhfbq"]
[ext_resource type="Resource" uid="uid://h8yglehg8si2" path="res://assets/data/characters/007_mole_char.tres" id="16_pnxxu"]
[ext_resource type="Resource" uid="uid://cg2gt1s2ilepn" path="res://assets/data/characters/008_lizard_char.tres" id="17_7v5we"]
[ext_resource type="Resource" uid="uid://bo6i4mxety0iv" path="res://assets/data/characters/009_snake_char.tres" id="18_6npl6"]
[ext_resource type="Texture2D" uid="uid://di28gxd7rmq4f" path="res://assets/art/crew_member_buttons/squirrel/Lounge-Scene_0005_Squirrel.png" id="18_38au6"]
[ext_resource type="Texture2D" uid="uid://dim50kfnx652l" path="res://assets/art/crew_member_buttons/bird/Lounge-Scene_0000_Sparrow.png" id="18_vgun1"]
[ext_resource type="BitMap" uid="uid://c24iq63nfm5rn" path="res://assets/art/crew_member_buttons/bird/Lounge-Scene_0000_Sparrow.bmp" id="19_fi3vc"]
[ext_resource type="BitMap" uid="uid://c4icuvy5p7ur2" path="res://assets/art/crew_member_buttons/squirrel/Lounge-Scene_0005_Squirrel.bmp" id="19_ojond"]
[ext_resource type="Resource" uid="uid://4vcpwnnptf5r" path="res://assets/data/characters/010_mantis_char.tres" id="19_qmf8k"]
[ext_resource type="Resource" uid="uid://1nhgxq12mwuo" path="res://assets/data/characters/011_rabbit_char.tres" id="20_pbwmt"]
[ext_resource type="Resource" uid="uid://beppcdvy1b3s0" path="res://assets/data/characters/012_fish_char.tres" id="21_71v0u"]
[ext_resource type="Texture2D" uid="uid://cfsacks8n82fy" path="res://assets/art/crew_member_buttons/lizard/Lounge-Scene_0004_Lizard.png" id="21_iri1f"]
[ext_resource type="BitMap" uid="uid://o1hxsxnpti16" path="res://assets/art/crew_member_buttons/lizard/Lounge-Scene_0004_Lizard.bmp" id="22_ln5tf"]
[ext_resource type="Texture2D" uid="uid://bruvojuk2thns" path="res://assets/art/crew_member_buttons/mole/Lounge-Scene_0009_Mole.png" id="24_j3nwi"]
[ext_resource type="PackedScene" uid="uid://cnbbp4gy833n" path="res://src/shared_ui/resource_display/money_display.tscn" id="25_dg1g1"]
[ext_resource type="BitMap" uid="uid://bfmhisvh8ijw6" path="res://assets/art/crew_member_buttons/mole/Lounge-Scene_0009_Mole.bmp" id="25_w77ge"]
[ext_resource type="PackedScene" uid="uid://ybyc5lib301u" path="res://src/shared_ui/resource_display/fuel_display.tscn" id="26_fgbkb"]
[ext_resource type="Script" path="res://src/indoor_preparation/go_outside_button.gd" id="27_7d8ip"]
[ext_resource type="Texture2D" uid="uid://irx12tlwo4yj" path="res://assets/art/crew_member_buttons/frog/Lounge-Scene_0003_Frog.png" id="27_b6sjr"]
[ext_resource type="BitMap" uid="uid://b7sdssxcvtu83" path="res://assets/art/crew_member_buttons/frog/Lounge-Scene_0003_Frog.bmp" id="28_jk5pl"]
[ext_resource type="Texture2D" uid="uid://dyx6hrfksmc17" path="res://assets/art/crew_member_buttons/raccoon/Lounge-Scene_0012_Racoon.png" id="30_v88pa"]
[ext_resource type="BitMap" uid="uid://s1kf5ek724ka" path="res://assets/art/crew_member_buttons/raccoon/Lounge-Scene_0012_Racoon.bmp" id="31_i5exv"]
[ext_resource type="Texture2D" uid="uid://cdveo2h41lnc7" path="res://assets/art/crew_member_buttons/monkey/Lounge-Scene_0002_Monkey.png" id="36_kh7au"]
[ext_resource type="BitMap" uid="uid://ce10u2pid47i5" path="res://assets/art/crew_member_buttons/monkey/Lounge-Scene_0002_Monkey.bmp" id="37_66qdg"]
[ext_resource type="Texture2D" uid="uid://dnuxarlb0snmj" path="res://assets/art/crew_member_buttons/mantis/Lounge-Scene_0013_Mantis.png" id="39_fi21k"]
[ext_resource type="BitMap" uid="uid://kvq2dyk8eaqj" path="res://assets/art/crew_member_buttons/mantis/Lounge-Scene_0013_Mantis.bmp" id="40_epnv1"]
[ext_resource type="Texture2D" uid="uid://cgiadroesxfyn" path="res://assets/art/crew_member_buttons/mouse/Lounge-Scene_0006_Mouse.png" id="42_2palc"]
[ext_resource type="BitMap" uid="uid://bei0xuu3sdkyh" path="res://assets/art/crew_member_buttons/mouse/Lounge-Scene_0006_Mouse.bmp" id="43_476pc"]
[ext_resource type="Texture2D" uid="uid://buwe8275yr3xq" path="res://assets/art/crew_member_buttons/rabbit/Lounge-Scene_0011_Bunny.png" id="45_ut6o2"]
[ext_resource type="BitMap" uid="uid://cn5s0fubg5a6a" path="res://assets/art/crew_member_buttons/rabbit/Lounge-Scene_0011_Bunny.bmp" id="46_nbrpl"]
[ext_resource type="Texture2D" uid="uid://10xls2r2y6ly" path="res://assets/art/crew_member_buttons/fish/Lounge-Scene_0007_Fish.png" id="48_0esre"]
[ext_resource type="BitMap" uid="uid://csc2x0wst1cl3" path="res://assets/art/crew_member_buttons/fish/Lounge-Scene_0007_Fish.bmp" id="49_p0ymt"]

[sub_resource type="Gradient" id="Gradient_6i6wn"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qmhvb"]
gradient = SubResource("Gradient_6i6wn")
width = 25

[sub_resource type="Gradient" id="Gradient_qfqlf"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0oafc"]
gradient = SubResource("Gradient_qfqlf")
width = 25

[sub_resource type="Gradient" id="Gradient_72bq1"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gdr6s"]
gradient = SubResource("Gradient_72bq1")
fill_to = Vector2(0.0641026, 0.230769)

[node name="IndoorPreparation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bky62")
script = ExtResource("2_0rynj")

[node name="AudioManager" parent="." instance=ExtResource("3_3bed5")]
sfx_enter_next_region = null
sfx_game_victory = null

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -116.0
offset_right = 1280.0
offset_bottom = 874.0
texture = ExtResource("4_2oynj")
expand_mode = 1
stretch_mode = 4

[node name="LeftGradient" type="TextureRect" parent="TextureRect"]
z_index = 2
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 25.0
grow_vertical = 2
texture = SubResource("GradientTexture1D_qmhvb")

[node name="RightGradient" type="TextureRect" parent="TextureRect"]
z_index = 2
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture1D_0oafc")

[node name="TopLeftCorner" type="TextureRect" parent="TextureRect"]
z_index = 2
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 350.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_gdr6s")

[node name="BottomLeftCorner" type="TextureRect" parent="TextureRect"]
z_index = 2
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 350.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_gdr6s")
flip_v = true

[node name="TopRightCorner" type="TextureRect" parent="TextureRect"]
z_index = 2
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture2D_gdr6s")
flip_h = true

[node name="BottomRightCorner" type="TextureRect" parent="TextureRect"]
z_index = 2
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture2D_gdr6s")
flip_h = true
flip_v = true

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
z_index = 2
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="TextureRect"]
z_index = 2
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Screen" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchor_left = 0.275
anchor_top = 0.08
anchor_right = 0.72
anchor_bottom = 0.57
offset_left = 20.0
offset_top = -1.6
offset_right = 13.4
offset_bottom = 63.6
theme = ExtResource("4_u741y")
script = ExtResource("3_culvi")

[node name="HomeDisplay" parent="Screen" instance=ExtResource("3_eot0a")]
layout_mode = 1

[node name="HirePreviewDisplay" parent="Screen" instance=ExtResource("4_note4")]
visible = false
layout_mode = 1

[node name="HireDetail" parent="Screen" instance=ExtResource("5_lncqs")]
visible = false
layout_mode = 1

[node name="CharacterDetail" parent="Screen" instance=ExtResource("6_4pq4g")]
visible = false
layout_mode = 1

[node name="NotificationDimmer" type="ColorRect" parent="Screen"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.447059)
script = ExtResource("9_d2y4p")

[node name="ScreenNotification" parent="Screen" instance=ExtResource("9_b6hiw")]
visible = false
z_index = 2
layout_mode = 1

[node name="CrewButtons" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("13_2a042")

[node name="CrewButton9" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 63.0
offset_top = 233.0
offset_right = 1140.0
offset_bottom = 1777.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("15_68lr5")
texture_click_mask = ExtResource("16_dhfbq")
character_factory = ExtResource("18_6npl6")

[node name="CrewButton" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 3.0
offset_top = 315.0
offset_right = 690.0
offset_bottom = 1650.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("18_38au6")
texture_click_mask = ExtResource("19_ojond")
character_factory = ExtResource("9_51070")

[node name="CrewButton8" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 223.0
offset_top = 458.0
offset_right = 1074.0
offset_bottom = 1652.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("21_iri1f")
texture_click_mask = ExtResource("22_ln5tf")
character_factory = ExtResource("17_7v5we")

[node name="CrewButton7" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 468.0
offset_top = 554.0
offset_right = 1354.0
offset_bottom = 1110.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("24_j3nwi")
texture_click_mask = ExtResource("25_w77ge")
character_factory = ExtResource("16_pnxxu")

[node name="CrewButton2" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 335.0
offset_top = 577.0
offset_right = 1345.0
offset_bottom = 1333.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("27_b6sjr")
texture_click_mask = ExtResource("28_jk5pl")
character_factory = ExtResource("10_lfrlp")

[node name="CrewButton3" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 28.0
offset_top = 53.0
offset_right = 679.0
offset_bottom = 616.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("30_v88pa")
texture_click_mask = ExtResource("31_i5exv")
character_factory = ExtResource("12_tfexc")

[node name="CrewButton4" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.999999
offset_top = 556.0
offset_right = 1023.0
offset_bottom = 1369.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("18_vgun1")
texture_pressed = null
texture_hover = null
texture_click_mask = ExtResource("19_fi3vc")
character_factory = ExtResource("13_1osln")

[node name="CrewButton5" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 699.0
offset_top = 550.0
offset_right = 1822.0
offset_bottom = 1580.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("36_kh7au")
texture_click_mask = ExtResource("37_66qdg")
character_factory = ExtResource("14_kx6ve")

[node name="CrewButton10" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1093.0
offset_top = 110.0
offset_right = 1673.0
offset_bottom = 1691.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("39_fi21k")
texture_click_mask = ExtResource("40_epnv1")
character_factory = ExtResource("19_qmf8k")

[node name="CrewButton6" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1157.0
offset_top = 446.0
offset_right = 1524.0
offset_bottom = 1078.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("42_2palc")
texture_click_mask = ExtResource("43_476pc")
character_factory = ExtResource("15_nfr47")

[node name="CrewButton11" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 930.0
offset_top = 247.0
offset_right = 1646.0
offset_bottom = 1600.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("45_ut6o2")
texture_click_mask = ExtResource("46_nbrpl")
character_factory = ExtResource("20_pbwmt")

[node name="CrewButton12" parent="CrewButtons" instance=ExtResource("8_40muy")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 950.0
offset_top = 515.0
offset_right = 1705.0
offset_bottom = 1385.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("48_0esre")
texture_click_mask = ExtResource("49_p0ymt")
character_factory = ExtResource("21_71v0u")

[node name="GoOutsideButton" type="Button" parent="." groups=["tutorial_triggers"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_right = 44.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Go Outside
To Battle"
script = ExtResource("27_7d8ip")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_right = -60.0
offset_bottom = 68.0
grow_horizontal = 0
theme_override_constants/separation = 0

[node name="MoneyDisplay" parent="VBoxContainer" instance=ExtResource("25_dg1g1")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="FuelDisplay" parent="VBoxContainer" instance=ExtResource("26_fgbkb")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[connection signal="insufficient_funds" from="." to="AudioManager" method="_on_indoor_preparation_insufficient_funds"]
[connection signal="upgrade_success" from="." to="AudioManager" method="_on_indoor_preparation_upgrade_success"]
[connection signal="mouse_entered" from="GoOutsideButton" to="AudioManager" method="_on_go_outside_button_mouse_entered"]
[connection signal="pressed" from="GoOutsideButton" to="AudioManager" method="_on_go_outside_button_pressed"]
